[project]
name = "shopify-product-management"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "gspread>=6.2.1",
    "pandas>=2.3.3",
    "pillow>=12.0.0",
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
]

[dependency-groups]
dev = [
    "pre-commit>=4.5.1",
    "ptpython>=3.0.32",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "pytest-mock>=3.15.1",
]
